force-app/main/default/objects/Share_Holder__c/Share_Holder__c.object-meta.xml
<CustomObject>
    <label>Share Holder</label>
    <nameField>
        <displayFormat>SH-{00000000}</displayFormat>
        <label>Share Holder SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Share Holders (From Enlite)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>