force-app/main/default/objects/Share_Holder__c/fields/Percent_Share__c.field-meta.xml
<CustomField>
    <fullName>Percent_Share__c</fullName>
    <label>Percent Share</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>