force-app/main/default/objects/Share_Holder__c/fields/Ref_Dataset_ID__c.field-meta.xml
<CustomField>
    <fullName>Ref_Dataset_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ref Dataset ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>