force-app/main/default/objects/Share_Holder__c/fields/Share_Holder_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Share_Holder_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Share Holder External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>