force-app/main/default/objects/Share_Holder__c/fields/SHAREHOLDER_SEQ__c.field-meta.xml
<CustomField>
    <fullName>SHAREHOLDER_SEQ__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shareholder Seq</label>
    <length>10</length>
    <type>Text</type>
</CustomField>