force-app/main/default/objects/Share_Holder__c/fields/Total_Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Book_Value__c</fullName>
    <label>Total Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>